--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "random-unicode-worker",
+  "name": "trmnl-worker",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
