--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "wrangler": "^4.34.0",
+    "@cloudflare/workers-types": "^4.20251001.0",
     "tsx": "^4.17.0",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4",
+    "wrangler": "^4.34.0"
   },
   "dependencies": {
     "@xmldom/xmldom": "^0.8.11",
