Slickdeails: Use AI for labelling

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,7 @@ compatibility_date = "2024-05-01"
 [[kv_namespaces]]
 binding = "TRMNL_WORKERS_KV"
 id = "bd9dad65430948879f23dfba951de218"
+
+[ai]
+binding = "AI"
+remote = true
