--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,3 +9,10 @@ id = "bd9dad65430948879f23dfba951de218"
 [ai]
 binding = "AI"
 remote = true
+
+[observability]
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
+persist = true
